assets/css/style.css
body {
    background-color: #DB2929;
    font-family: 'Righteous', cursive;
    width: auto;
}

h1, h2, h3, h4 {
    font-size: 2rem;
    padding: 15px 20px 15px;
    padding-bottom: 15px;
    color: #fff;
}

/* LoveSports Logo */
.logo {
    float: left;
    font-size: 2.5rem;
    padding-left: 30px;
    margin-top: 30px;
    color: #fff;
}

/* Navbar inspired by my project 1 milestone, !important was used to remove the bootstrap default colors */
.navbar {
    background-color: #DB2929 !important;
}

.navbar-nav a {
    color: #fff;
    font-size: 1.5rem;
    margin-top: 40px;
    margin-right: 50px;
}

/* hero image */
#image-wrapper {
    background: url("../images/hero.webp");
    background-size: cover;
    background-repeat: no-repeat;
    background-color: #DB2929;
    height: 70vh;
    position: relative;
    width: 70%;
    margin: 10px auto;
    padding-top: 30px;
    border-radius: 5px;
}

/* hero image background red filter, inpired by css tricks website */
#image-wrapper::before {
    content: "";
    background-color: rgba(211, 51, 51, 0.6);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
    border-radius: 10px;
}
/* Hero box whihc holds the typing effect element */
#hero-box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    color: white;
    text-align: center;
    font-size: 25px;
}

/* typing effect on hero image, powered by a jquery plugin called type effect */
.typing-effect {
    font-size: 55px;
    font-weight: 500;
}

/* About header made fully responsive on all devices using bootstrap */
.about-header {
    padding-left: 20px;
    color: #fff;
    font-size: 2rem;
}

.about-text {
    font-size: 1.5rem;
    color: #fff;
    padding: 10px 20px;
}

.homepage-about {
    width: 1200px;
    margin: 0 auto;
    align-items: center;
}

/* div holding the social media information */
.social-container {
    text-align: center;
    color: #fff;
    background-color: #DB2929;
}

.social-header {
    text-align: center;
    color: #fff;
    font-size: 2rem;
}

.socials {
    color: #fff;
    font-size: 2.5rem;
    font-weight: 600;
    text-align: center;
    padding: 15px 15px;
}

/* social icons change to black on hover */
.socials:hover {
    color: #111;
}

/* Quiz Game */

.quiz-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

/* div that holds the quiz game */
.quiz-body {
    padding: 0;
    margin: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

#question-counter {
    text-align: right;
    font-size: 20px;
    padding-top: 10px;
    font-weight: 500;
}

#top-score {
    color: #23903c;
    font-weight: 500;
    font-size: 20px;
}

#score-counter {
    font-weight: 500;
    font-size: 20px;
}

.quiz-container {
    width: 800px;
    max-width: 80%;
    background-color: #fff;
    border-radius: 5px;
    padding: 10px;
    box-shadow: 0 0 10px 2px;
}

.btn-grid {
    display: grid;
    grid-template-columns: repeat(2, auto);
    gap: 10px;
    margin: 20px 0;
}

.btn {
    background-color: #e0e0e0;
    font-size: 15px;
    font-weight: 500;
    padding: 15px 20px;
    outline: none;
    border-width: 2px;
    border-radius: 5px;
    cursor: pointer;
}

.btn:hover {
    border-color: #111;
}

/* javaScript adds this class on correct answers */
.btn.correct {
    background-color: #50C878;
    border-color: #23903c;
    color: #fff;
}

/* javaScript adds this class on incorrect answers */
.btn.wrong {
    background-color: #DB2929;
    border-color: #a42834;
    color: #fff;
}

.start-btn, .next-btn {
    font-size: 20px;
    font-weight: 500;
    padding: 15px 15px;
    outline: none;
    border-radius: 5px;
    background-color: #e0e0e0;
    cursor: pointer;
    width: 50%;
    margin: 10px;
}

.controls {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* hide class used to hide some elements for the quiz game once started, and next question */
.hide {
    display: none;
}

/* styles for the feedback prompt when questions are answered. */
.answer-feedback {
    width: 100%;
    text-align: center;
    font-size: 20px;
    color: #fff;
    margin: 10px auto;
    border-radius: 5px;
    border-width: 5px;
}

.quiz-rules-container  h1{
    color: #111;
    text-align: center;
    padding-bottom: 10px;
    font-size: 25px;
    cursor: pointer;
}

.quiz-rules-container  h1:hover {
    color: #23903c;
}

.quiz-rules {
    padding-bottom: 10px;
    display: none;
}

/* Score Tracker/Top scorer api table */

.stat-heading {
    font-size: 1.5rem;
    text-align: center;
    padding: 30px;
}

.stat-card {
    display: inline-block;
}

#standings-table, #scorer-table {
    background-color: #fff;
    margin: 30px auto;
    padding: 30px;
    width: 80%;
    min-width: 30%;
    border-radius: 5px;
    box-shadow: 0 0 10px 2px;
}

th {
    font-size: 1rem;
    padding: 5px;
    background-color: #111;
    color: #fff;
    text-align: left;
}

td {
    font-size: 0.7rem;
    padding: 5px;
    text-align: left;
}

/* styles the team logo in the API */
.team-logo {
    height: 40px;
    padding-right: 30px;
    padding-bottom: 10px;
}

/* styles the player profile picture in the API */
.player-photo {
    height: 40px;
    padding-right: 20px;
    padding-bottom: 10px;
}

/* Form */
.form-container {
    background-color: #fff;
    margin: 30px auto;
    padding: 30px;
    width: 50%;
    min-width: 30%;
    border-radius: 5px;
    box-shadow: 0 0 10px 2px;
}

.form-container  h1, h2, legend {
    color: #DB2929;
    font-size: 1.3rem;
    margin: auto;
    display: grid;
    justify-content: center;
    text-align: center;
}

.input {
    width: 70%;
    margin: 10px auto;
    padding: 5px;
    border-radius: 5px;
    border-width: 3px;
    background-color: #e0e0e0;
    display: grid;
}

label {
    display: grid;
    width: 70%;
    text-align: left;
    margin: 5px auto;
}

.input:hover {
    border-color: #DB2929;
    border-width: 5px;
}

.submit {
    width: 70%;
    padding: 5px;
    margin: 10px auto;
    background-color: #DB2929;
    color: #fff;
    font-size: 1.5rem;
    border-radius: 5px;
    display: grid;
    justify-content: center;
}

.submit:hover {
    border-width: 5px;
    background-color: #50C878;
    color: #fff;
}

legend {
    text-align: center;
    padding-bottom: 5px;
}

/* 404 page */

.error-section {
    height: 50vh;
    width: 50vw;
    margin:  50px auto;
}

.error-section  h2 {
    font-size: 20px;
}

.error-section button {
    font-size: 20px;
}

.error404 {
    text-align: center;
    font-size: 35px;
    padding-top: 30px;
}

/* media queries for mobile */
@media screen and (max-width: 768px) {
    .choice-container {
        min-width: 40rem;
    }

    .form-container {
        width: 90%;
    }

    .logo {
        font-size: 2rem;
        padding-left: 10px;
    }

    .about-text {
        font-size: 1rem;
    }

    .mob-hide {
        display: none;
    }

    .team-logo {
        height: 30px;
    }

    .player-photo {
        height: 30px;
    }

    td {
        font-size: 0.7rem;
    }

    .btn-grid {
        grid-template-columns: repeat(1, auto);
    }

    .typing-effect {
        font-size: 35px;
    }

    .error-section {
        height: 40vh;
        width: 80vw;
    }
    .homepage-about {
        padding: 5px 5px;
        max-width: 90%;
    }

    #image-wrapper {
        width: 90%;
        margin: 10px auto;
    }

    .navbar-nav a {
        padding-left: 10px;
    }

    #standings-table, #scorer-table {
        padding: 10px 5px;
        width: 90%;
    }
}

